# pico-gb-mobile-adapter

./: .gitignore  CMakeLists.txt  README.md  gbridge.py  mobile_adapter_data.py  usb_pico_interface.py
include/: bridge_debug_commands.h  device_config.h  flash_eeprom.h  gb_printer.h  gbridge.h  gbridge_timeout.h  io_buffer.h  linkcable.h  pico_mobile_adapter.h  save_load_config.h  socket_impl.h  sync.h  time_defs.h  useful_qualifiers.h  utils.h
include/generic/: gbridge.h  gbridge_timeout.h  upkeep_callback.h  utils.h
include/specific/: device_config.h  pico_mobile_adapter.h  save_load_config.h  useful_qualifiers.h
src/: bridge_debug_commands.c  flash_eeprom.c  gb_printer.c  gbridge.c  gbridge_timeout.c  io_buffer.c  linkcable.c  linkcable_sm.pio  pico_gb_printer.c  pico_mobile_adapter.c  save_load_config.c  socket_impl.c  sync.c  upkeep_callback.c
src/generic/: bridge_debug_commands.c  gbridge.c  gbridge_timeout.c  socket_impl.c  utils.c
src/specific/: linkcable_sm.pio  pico_mobile_adapter.c  save_load_config.c  usb_descriptors.c
